<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/online_komut_ekle"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/dialog_online_komut_ekle_baslik"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/komut_basligi"
            android:textColor="#333"
            android:textColorHint="#666"/>

        <EditText
            android:id="@+id/dialog_online_komut_ekle_aciklama"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/komut_aciklamasi"
            android:textColor="#333"
            android:textColorHint="#666"/>

        <EditText
            android:id="@+id/dialog_online_komut_ekle_kategori"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/komut_kategorisi"
            android:textColor="#333"
            android:textColorHint="#666"/>

        <Button
            android:id="@+id/dialog_online_komut_ekle"

            android:layout_marginTop="10dp"
            android:textColor="@color/beyaz"
            android:background="@color/colorAccent"
            android:text="@string/ekle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





    </LinearLayout>






</LinearLayout>